Correct: schoolform (action)

--- a/templates/schoolform.html
+++ b/templates/schoolform.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h3>Invoer van een nieuwe school</h3>
-    <form method="post" action="form" >
+    <form method="post" action="schoolform" >
       Naam:<br>
       <input type="text" name="naam"><br>
       Plaats<br>
