--- a/templates/docentform.html
+++ b/templates/docentform.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h3>Invoer van een nieuwe docent</h3>
-    <form method="post" action="form" >
+    <form method="post" action="docentform" >
       Naam:<br>
       <input type="text" name="naam"><br>
       Vak(ken): (meerdere vakken gescheiden door ",")<br>
