Correct: scholen template

--- a/templates/scholen.html
+++ b/templates/scholen.html
@@ -12,6 +12,6 @@ $def with (scholen)
       <li> $s["naam"] te $s["plaats"]
       </li>
     </ul>
-    <a href="/scholenform">Voeg school toe</a>
+    <a href="/schoolform">Voeg school toe</a>
   </body>
 </html>
