--- a/templates/docenten.html
+++ b/templates/docenten.html
@@ -14,6 +14,6 @@ $def with (docenten)
           - $v
       </li>
     </ul>
-    <a href="/form">Voeg docent toe</a>
+    <a href="/docentform">Voeg docent toe</a>
   </body>
 </html>
