--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -10,6 +10,10 @@ $def with (posts)
         <div>
             <h3>$p["title"]</h3>
             <p>$p["content"]</p>
+            <form action="editform" method="post">
+              <input type="text" name="title" value="$p['title']">
+              <button type="submit">edit</button>
+            </form>
         </div>
     </body>
 </html>
