--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -9,11 +9,16 @@ $def with (posts)
         $for p in posts:
         <div>
             <h3>$p["title"]</h3>
-            <p>$p["content"]</p>
+            <p>$:markdown(p["content"])</p>
             <form action="editform" method="post">
               <input type="text" name="title" value="$p['title']">
               <button type="submit">edit</button>
             </form>
         </div>
+      <div>
+        <form action="create" method="get">
+          <button type="submit">new post</button>
+        </form>
+      </div>
     </body>
 </html>
