--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -1,3 +1,5 @@
+$def with (msg)
+
 <!doctype html>
 <html>
   <head>
@@ -5,6 +7,7 @@
   </head>
   <body>
     This is the login page.
+    <p>$msg</p>
     <form action="/login" method="POST">
       <table id="login">
         <tr>
@@ -20,6 +23,9 @@
             <td><input type="submit" value="LOGIN"></td>
         </tr>
       </table>
+    </form>
+    <form action="/logout" method="GET">
+      <input type="submit" value="LOGOUT">
     </form>
   </body>
 </html>
